add pybind11 submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "wenet_wrapper/interface/wenet"]
 	path = wenet_wrapper/interface/wenet
 	url = https://github.com/wenet-e2e/wenet.git
+[submodule "python/pybind11"]
+	path = python/pybind11
+	url = https://github.com/pybind/pybind11.git
